handle list statuses endpoint
