# apps/api/src/routes/index.ts
@@ -1,10 +1,12 @@
 import { OpenAPIHono } from "@hono/zod-openapi";
 
 import { tickets } from "./tickets";
+import { statuses } from "./statuses";
 
 const openapi = new OpenAPIHono();
 
 openapi.route("/tickets", tickets);
+openapi.route("/statuses", statuses);
 
 openapi.doc("/docs", {
   openapi: "3.0.0",
