# packages/trpc/src/router/index.ts
@@ -1,8 +1,10 @@
 import { protectedProcedure, publicProcedure, router } from "../trpc";
 import { ticketsRouter } from "./tickets";
+import { statusesRouter } from "./statuses";
 
 export const appRouter = router({
   tickets: ticketsRouter,
+  statuses: statusesRouter,
   session: protectedProcedure.query(async ({ ctx }) => {
     return ctx.session;
   }),
