# packages/validators/src/index.ts
@@ -1,2 +1,3 @@
 export * from "./tickets";
 export * from "./users";
+export * from "./statuses";
