# packages/validators/src/statuses/schema.ts
@@ -1,0 +1,4 @@
+import { createSelectSchema } from "../schema-factory";
+import { statuses } from "@repo/db/schema";
+
+export const Status = createSelectSchema(statuses);
